--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
+    "body-parser": "^1.20.1",
     "express": "^4.18.2",
-    "mysql2": "^3.1.2"
+    "mysql2": "^3.1.2",
+    "node": "^19.6.0"
   }
 }
